# ai-lab-aka

./: .env.sample  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
src/: cli.py
src/company_detail/: __init__.py  run_csv_batch.py  schema.py  workflow.py
src/company_detail/discover/: __init__.py  explore_hubs.py  main.py  schema.py  select_candidates.py  utils.py
src/company_detail/extract/: __init__.py  main.py  schema.py
src/company_detail/merge/: __init__.py  main.py
src/infra/: langfuse_observation.py
src/infra/jina_ai/: __init__.py  jina_ai_reader.py
src/infra/langfuse/: __init__.py  with_span.py
src/infra/llm/: __init__.py  generate_structured_output.py  registry.py
